[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/02_scenes/01_UI/06_InterractionIndicator/InterractionIndicator.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/02_scenes/04_Items/02_Loot/05_WeaponDrop/WeaponDrop.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0

[node name="Weapon" type="RigidBody2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="PlayerCollisionDetector" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionDetector"]
shape = SubResource( 1 )

[node name="InterractionIndicator" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, -8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true
[connection signal="body_entered" from="PlayerCollisionDetector" to="." method="_on_PlayerCollisionDetector_body_entered"]
[connection signal="body_exited" from="PlayerCollisionDetector" to="." method="_on_PlayerCollisionDetector_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
